// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Contact Primary 1`] = `
<section
  className="section"
>
  <h2
    className="headline"
  >
    Skill
  </h2>
  <p
    className="body"
  >
    Android/Kotlin エンジニア。その他 Swift/iOS JavaScript, TypeScript, Ruby など。詳細は
     
    <a
      className="link"
      href="https://github.com/hmiyado/resume"
    >
      GitHub レジュメ
    </a>
     
    を参照。
  </p>
  <h2
    className="headline"
  >
    Price
  </h2>
  <p
    className="body"
  >
    時間単価6000円〜。詳細要相談。
  </p>
  <h2
    className="headline"
  >
    Contact
  </h2>
  <p
    className="body"
  >
    <a
      className="link"
      href="https://twitter.com/miyado20th"
    >
      Twitter
    </a>
  </p>
</section>
`;

exports[`Storyshots Entry Entry 1 1`] = `
Array [
  <h2
    className="headline"
  >
    GW
  </h2>,
  <p
    className="body"
  >
    GW はコーディングしたり、リモートゲームしたり、無計画だったわりには楽しく過ごせた。コーディングでは2年前のリポジトリを引っ張り出して整理したら、思っていた以上に興が乗った。次に触るのは2年後のGWかもしれない。
  </p>,
  <div
    className="footer"
  >
    <div
      className="text"
    >
      2021-05-05T21:12
    </div>
    <div
      className="text"
    >
      hmiyado
    </div>
  </div>,
]
`;

exports[`Storyshots Entry Primary 1`] = `
Array [
  <h2
    className="headline"
  >
    short title
  </h2>,
  <p
    className="body"
  >
    body
  </p>,
  <div
    className="footer"
  >
    <div
      className="text"
    >
      2021-05-05T21:12
    </div>
    <div
      className="text"
    >
      hmiyado
    </div>
  </div>,
]
`;

exports[`Storyshots Sentence Long 1`] = `
Array [
  <h2
    className="headline"
  >
    long long long long long long title
  </h2>,
  <p
    className="body"
  />,
]
`;

exports[`Storyshots Sentence Short 1`] = `
Array [
  <h2
    className="headline"
  >
    short title
  </h2>,
  <p
    className="body"
  />,
]
`;
